@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Text-PSP
-version:      1.011
+version:      1.012
 version_from: lib/Text/PSP.pm
 installdirs:  site
 requires:
